--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.5",
     "axios": "^0.19.2",
+    "immer": "^6.0.2",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -26,7 +27,12 @@
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.3",
     "react-navigation-stack": "^2.3.6",
+    "react-redux": "^7.2.0",
     "reactotron-react-native": "^4.0.3",
+    "reactotron-redux": "^3.1.3",
+    "reactotron-redux-saga": "^4.2.3",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
